# heaplens

./: .eslintrc.json  .gitignore  .vscodeignore  CITATION.cff  CONTRIBUTING.md  FRONTEND_INTEGRATION.md  HOW_TO_DEBUG_WEBVIEW.md  QUICK_WEBVIEW_DEBUG.md  README.md  SUNBURST_VISUALIZATION.md  TESTING.md  WEBVIEW_DEBUG.md  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
analysis-engine/: Cargo.toml
analysis-engine/src/: lib.rs  main.rs  parser.rs
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
hprof-analyzer/: ASYNC_SERVER.md  Cargo.toml  DOMINATORS.md  HEAP_GRAPH.md  README.md  SCAN_RECORDS.md
hprof-analyzer/crates/jvm-hprof/: Cargo.toml
hprof-analyzer/crates/jvm-hprof/src/: heap_dump.rs  lib.rs
hprof-analyzer/crates/jvm-hprof/src/heap_dump/: primitive_array.rs
hprof-analyzer/examples/: scan_example.rs
hprof-analyzer/src/: comparison.rs  dominator.rs  graph_builder.rs  heapql.rs  lib.rs  main.rs  test_helpers.rs  waste.rs
hprof-analyzer/tests/: integration.rs
jvm-agent/: pom.xml
media/screenshots/: .gitkeep
scripts/: package-binary.sh
src/: aiFixProvider.ts  analysisContext.ts  chatParticipant.ts  client.ts  dependencyResolver.ts  diffAlerts.ts  errorMessages.ts  extension.ts  hprofEditorProvider.ts  llmClient.ts  messageHandlers.ts  monitorHandlers.ts  monitorService.ts  promptTemplates.ts  rustClient.ts  sourceResolver.ts  telemetry.ts  webviewProvider.ts
src/webview/: styles.ts  (+1 more)
(+72 files in other folders)
