[package]
name = "hprof-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "hprof_analyzer"
path = "src/lib.rs"

[[bin]]
name = "hprof-server"
path = "src/main.rs"

[dependencies]
jvm-hprof = "0.1"
memmap2 = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
petgraph = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
